# model-inference-plugin-rdf

./: README.md  example.py  plugin.py  sbumed_predictions_to_graph.py  sbumed_predictions_to_graph_v2.py  setup.cfg
.github/workflows/: ci.yml
tests/: test_min.py
