[metadata]
name = sbumed_predictions_to_graph
url = https://github.com/kaczmarj/model-inference-plugin-rdf
author = Jakub Kaczmarzyk
author_email = jakub.kaczmarzyk@stonybrookmedicine.edu
description = Store model predictions in standardized graph format.
license = Apache License, 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = sbumed_predictions_to_graph
python_requires = >= 3.6
install_requires =
    rdflib>=4.2.1

[options.extras_require]
dev =
    black
    flake8
    mypy
    pytest

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --verbose

[mypy-rdflib.*]
ignore_missing_imports = True
